--- a/wildecalc.html
+++ b/wildecalc.html
@@ -35,9 +35,9 @@ a:hover {
     margin-left: 4px;   /* pulls it right to align visually */
   }
 
-  @media(max-width: 700px) {
+  @media(max-width: 800px) {
     .sliders {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
@@ -69,7 +69,7 @@ a:hover {
 
 
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
  .graph-row {
     grid-template-columns: 1fr; /* stack vertically */
   }
@@ -169,8 +169,19 @@ a:hover {
   color: #777;
 }
 
-
-
+.viewport-scroll-fade {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  pointer-events: none;
+  background: linear-gradient(
+    to bottom,
+    rgba(245, 241, 232, 0) 0%,
+    rgba(245, 241, 232, 1) 90%
+  );
+}
 </style>
 </head>
 
@@ -178,6 +189,8 @@ a:hover {
 
 <h1>Wilde Quantitative Jungian Calculator</h1>
 
+  <b>How to use</b>: Adjust the sliders to match your MBTI preference strengths. Results section updates instantly.
+  <p>
 <details>
   <summary><strong>More Info</strong></summary>
   <p>This is a modernized minimal rewrite of the old Pyjamas-based calculator.</p>
@@ -277,6 +290,7 @@ a:hover {
 
 </fieldset>  
 
+<div class="viewport-scroll-fade"></div>
 
 <script>
 /* ---------- Helpers ---------- */
@@ -324,7 +338,8 @@ function updateBars(funcs) {
   const totalWidth = spacing * names.length + 40;
   svg.setAttribute("viewBox", `0 0 ${totalWidth} 160`);
 
-  svg.innerHTML = "";
+  svg.innerHTML = `      <line x1="0" y1="80" x2="${totalWidth}" y2="80"
+         stroke="#d8d8d8" stroke-width="1" stroke-dasharray="2 8" /> `;
 
   names.forEach((name, idx) => {
     const val = funcs[name];
@@ -332,11 +347,24 @@ function updateBars(funcs) {
     const x = idx * spacing + 20;
     const y = 140 - height;
 
+    const displayVal = Math.round((val * 200) - 100);
+    const opacity =
+        displayVal > 0  ? 1.0 :
+        displayVal === 0 ? 0.65 :
+                           0.40;
+
     svg.innerHTML += `
+
+
+
       <rect x="${x}" y="${y}" width="40" height="${height}"
-            fill="hsl(${idx*40},70%,60%)" stroke="#333"></rect>
-      <text x="${x+20}" y="155" class="bartext">${name}</text>
-      <text x="${x+20}" y="${y-5}" class="bartext">${Math.round((val*200)-100)}</text>
+            fill="hsl(${idx*40},70%,60%)"
+            fill-opacity="${opacity}"
+            stroke="#333"
+            stroke-opacity="${opacity}"></rect>
+      <text x="${x+20}" y="155" class="bartext" fill-opacity="${opacity}">${name}</text>
+      <text x="${x+20}" y="${y-5}" fill-opacity="${opacity}" class="bartext">${Math.round((val*200)-100)}</text>
+
     `;
   });
 }
