--- a/wildecalc.html
+++ b/wildecalc.html
@@ -182,6 +182,14 @@ a:hover {
     rgba(245, 241, 232, 1) 90%
   );
 }
+
+.axis-desc {
+  margin-top: 7px;
+  font-size: 0.82rem;
+  color: #666;
+  text-align: center;
+  margin-bottom: 0rem;    /* tiny nudge instead of default paragraph margin */
+}
 </style>
 </head>
 
@@ -269,7 +277,10 @@ a:hover {
       <text x="130" y="195" font-size="12" fill="#888">Ij: Focus</text>
 
       <circle id="dot" cx="100" cy="100" r="5" fill="red"></circle>
+      <text id="dot-label" font-size="12" fill="#333">50,50</text>
     </svg>
+    <p class="axis-desc">X = % Judging, Y = % Extraversion</p>
+
 
   </fieldset>
 
@@ -371,10 +382,32 @@ function updateBars(funcs) {
 
 function updateDot(av) {
   const dot = document.getElementById("dot");
+  const label = document.getElementById("dot-label");
+
   const x = av.j * 200;
   const y = 200 - av.e * 200;
+
   dot.setAttribute("cx", x);
   dot.setAttribute("cy", y);
+
+  // compute simple boundaries
+  const LEFT = 50;
+  const RIGHT = 150;
+  const TOP = 50;
+  const BOTTOM = 150;
+
+  let offsetX = 10;   // default: label to the right of dot
+  let offsetY = 4;    
+
+  if (x > RIGHT) offsetX = -50;         // dot near right edge → label on left
+  else if (x < LEFT) offsetX = 10;      // dot near left → label on right
+
+  if (y < TOP) offsetY = 18;            // dot near top → place label below it
+  else if (y > BOTTOM) offsetY = -9;    // dot near bottom → place label above it
+
+  label.setAttribute("x", x + offsetX);
+  label.setAttribute("y", y + offsetY);
+  label.textContent = `${Math.round(av.j * 100)}, ${Math.round(av.e * 100)}`;
 }
 
 function updateText(funcs) {
