--- a/wildecalc.html
+++ b/wildecalc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Wilde Quantitative Jungian Calculator (Modern Minimal)</title>
+<title>Wilde Quantitative Jungian Calculator</title>
 <style>
   body {
     font-family: system-ui, sans-serif;
@@ -190,6 +190,61 @@ a:hover {
   text-align: center;
   margin-bottom: 0rem;    /* tiny nudge instead of default paragraph margin */
 }
+
+.mbti-details {
+  margin: 0;
+  padding: 0;
+  padding-left: 4px;
+}
+
+summary {
+
+  // display: inline-block;
+  margin: 0 0 0.25rem 0;
+  margin-top: -0.35rem;  /* pulls it up just enough */
+  cursor: pointer;
+  font-size: 0.95rem;
+  color: #555;
+  padding-left: 4px;
+}
+
+summary:hover {
+  color: #333;
+}
+
+
+.mbti-details {
+  margin: 0 0 1rem 0;
+  padding-left: 2px;
+}
+
+.mbti-details summary {
+  cursor: pointer;
+  font-size: 0.95rem;
+  color: #555;
+}
+
+.mbti-details summary:hover {
+  color: #333;
+}
+
+.details-body {
+  margin-top: 0.5rem;
+  margin-left: 4px;
+  padding-left: 0.75rem;
+  border: 1px solid #999;
+  color: #555;
+  font-size: 0.9rem;
+  line-height: 1.35;
+  background: white;
+  border-radius: 4px;
+
+}
+
+h2, h3 {
+  margin-bottom: 0.75rem;
+}
+
 </style>
 </head>
 
@@ -200,11 +255,42 @@ a:hover {
   <b>How to use</b>: Adjust the sliders to match your MBTI preference strengths. Results section updates instantly.
   <p>
 <details>
-  <summary><strong>More Info</strong></summary>
-  <p>This is a modernized minimal rewrite of the old Pyjamas-based calculator.</p>
+  <summary>More Info</summary>
+  <div class="details-body">
+<p>A calculating/graphing page for quantitively calculating and displaying strength of modes (also known as "function attitudes" or "cognitive functions") according to the strengths of individual preferences. This page uses the approach from the book <a href="http://www.amazon.com/Jungs-Personality-Theory-Quantified-Douglass/dp/0857290991">Jung's Personality Theory Quantified</a> by Douglass J Wilde, author of <a href="http://www.amazon.com/Teamology-Construction-Organization-Effective-Teams/dp/1849967989/ref=sr_1_1?ie=UTF8&qid=1343600894&sr=8-1&keywords=teamology">Teamology</a>. A shorter article about Wilde's approach is available <a href="https://typeindepth.org/double-introverts-dual-extraverts/">here</a>.<p>
+
+ <p>This page in no way represents or is affiliated with Douglass Wilde, the MBTI or associated organizations.</p>
+    </div>
 </details>
 
 <h2>MBTI Preferences</h2>
+
+<details class="mbti-details">
+  <summary>More about MBTI Preferences</summary>
+  <div class="details-body">
+From Wikipedia's <a href="http://en.wikipedia.org/wiki/Myers-Briggs_Type_Indicator">MBTI Page</a>:<p>
+<b>Extraversion vs Introversion</b>
+<ul>
+<li>Extraverts are action oriented, while introverts are thought oriented.
+<li>Extraverts seek breadth of knowledge and influence, while introverts seek depth of knowledge and influence.
+<li>Extraverts often prefer more frequent interaction, while introverts prefer more substantial interaction.
+<li>Extraverts recharge and get their energy from spending time with people, while introverts recharge and get their energy from spending time alone
+</ul><p>
+
+<b>Sensing vs iNtuition</b>
+Sensing and intuition are the information-gathering (perceiving) functions. They describe how new information is understood and interpreted. Individuals who prefer sensing are more likely to trust information that is in the present, tangible, and concrete: that is, information that can be understood by the five senses. They tend to distrust hunches, which seem to come "out of nowhere". They prefer to look for details and facts. For them, the meaning is in the data. On the other hand, those who prefer intuition tend to trust information that is more abstract or theoretical, that can be associated with other information (either remembered or discovered by seeking a wider context or pattern). They may be more interested in future possibilities. For them, the meaning is in the underlying theory and principles which are manifested in the data.<p>
+
+<b>Thinking vs Feeling</b>
+Thinking and feeling are the decision-making (judging) functions. The thinking and feeling functions are both used to make rational decisions, based on the data received from their information-gathering functions (sensing or intuition). Those who prefer thinking tend to decide things from a more detached standpoint, measuring the decision by what seems reasonable, logical, causal, consistent, and matching a given set of rules. Those who prefer feeling tend to come to decisions by associating or empathizing with the situation, looking at it 'from the inside' and weighing the situation to achieve, on balance, the greatest harmony, consensus and fit, considering the needs of the people involved. Thinkers usually have trouble interacting with people that are inconsistent or illogical, and tend to give very direct feedback to others. They are concerned with the truth and view it as more important than being tactful.<p>
+
+<b>Judging vs Perceiving</b>
+Myers and Briggs added another dimension to Jung's typological model by identifying that people also have a preference for using either the judging function (thinking or feeling) or their perceiving function (sensing or intuition) when relating to the outside world (extraversion).
+Myers and Briggs held that types with a preference for judging show the world their preferred judging function (thinking or feeling). So TJ types tend to appear to the world as logical, and FJ types as empathetic. According to Myers, judging types like to "have matters settled".<br><br>
+  Those types who prefer perception show the world their preferred perceiving function (sensing or intuition). So SP types tend to appear to the world as concrete and NP types as abstract. According to Myers, perceptive types prefer to "keep decisions open".
+</div>
+  </details>
+  
+
 
 <div class="sliders">
 
@@ -248,6 +334,9 @@ a:hover {
     </div>
   </div>
 
+
+
+
 </div>
 
 <br>
@@ -280,7 +369,6 @@ a:hover {
       <text id="dot-label" font-size="12" fill="#333">50,50</text>
     </svg>
     <p class="axis-desc">X = % Judging, Y = % Extraversion</p>
-
 
   </fieldset>
 
